--- a/app/views/admins/dashboard/show.html.slim
+++ b/app/views/admins/dashboard/show.html.slim
@@ -3,5 +3,17 @@
     .center.paper
       .row
         .small-12.columns
-          h2 = t ".Admin Dashboard stuff", name: "Hello"
-          .subtitle = t ".More stuff will go here"
+          h2 = t ".Admin Dashboard stuff"
+          p Lab Assistants
+          - unless @la.empty?
+		    - for l in @la do
+			  a href="#{lab_assistant_path(l)}" #{l.first_name}
+		  - else
+		    p NO las FOUND
+		  p Teaching Assistants
+          - unless @ta.empty?
+		    - for t in @ta do
+			  a href="#{teaching_assistant_path(l)}" #{t.first_name}
+		  - else
+		    p NO tas FOUND
+
