ta's can log in to their own dashboard

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,5 +1,7 @@
 .home
   a href='admins/sign_in' Admin Login
+  br
+  a href='teaching_assistants/sign_in' TA Login
   .home-banner
     h2 CS61A Lab Assistant Homepage
 
