--- a/app/views/teaching_assistants/dashboard/show.html.erb
+++ b/app/views/teaching_assistants/dashboard/show.html.erb
@@ -1,1 +1,17 @@
-Hello
+<br>
+<br>
+
+Check in forms: 
+<br><br>
+
+<% @forms.each do |f| %>
+ <%= f.name %>
+ <%= f.SID %>
+ <%= f.event %>
+ <%= link_to 'See form', check_in_form_path(f) %>
+ <br>
+<% end %>
+
+<br>
+
+<a href='/check_in_forms/new'> Create a Check In Form </a>
