very basic bootstrap styling of pages

--- a/app/views/admins/dashboard/show.html.erb
+++ b/app/views/admins/dashboard/show.html.erb
@@ -1,5 +1,6 @@
-<div>    
-	<h2> Admin Dashboard Stuff</h2>
+<div class="row">    
+	<br>
+	<h2 align="center"> Admin Dashboard Stuff</h2>
 	<p>Lab Assistants</p>
 	<% unless @la.empty? %>
 		<% for l in @la do %>
