add images to homepage lolol

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,47 @@
 
 <div class="home-banner" align="center">
   <h2>CS61A Lab Assistant Homepage</h2>
-</div>	
+</div>
+
+<br> <br>
+
+
+<div align="center">
+	<%= image_tag "home_icon.png", :class=>"img-responsive" %>
+</div>
+
+<br> <br>
+
+<div class="row">
+	<div class="col-xs-4" align="center">
+		<%= image_tag "admin.png", :class=>"img-responsive", :size=>"100"%>
+	</div>
+	<div class="col-xs-4" align="center">
+		<%= image_tag "teaching.png", :class=>"img-responsive", :size=>"100"%>
+	</div>
+	<div class="col-xs-4" align="center">
+		<%= image_tag "lab.png", :class=>"img-responsive", :size=>"100"%>
+	</div>
+</div
+
+<div class="row">
+	<div class="col-xs-4" align="center">
+		<p> Admin/Course Manager </p>
+		Control everything!
+	</div>
+	<div class="col-xs-4" align="center">
+		<p> Teaching Assistants </p>
+		Manage your sections and check LAs in!
+	</div>
+	<div class="col-xs-4" align="center">
+		<p> Lab Assistants </p>
+		Keep your contact info up to date!
+	</div>
+</div>
+
+
+<br> <br>
+<br> <br>
 
 <div class="container">
 	<div class="row">
