change image sizes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,20 +23,20 @@
 
 
 <div align="center">
-	<%= image_tag "home_icon.png", :class=>"img-responsive" %>
+	<%= image_tag "home_icon.png", :class=>"img-responsive", :size=>"420" %>
 </div>
 
 <br> <br>
 
 <div class="row">
 	<div class="col-xs-4" align="center">
-		<%= image_tag "admin.png", :class=>"img-responsive", :size=>"100"%>
+		<%= image_tag "admin.png", :class=>"img-responsive", :size=>"60"%>
 	</div>
 	<div class="col-xs-4" align="center">
-		<%= image_tag "teaching.png", :class=>"img-responsive", :size=>"100"%>
+		<%= image_tag "teaching.png", :class=>"img-responsive", :size=>"60"%>
 	</div>
 	<div class="col-xs-4" align="center">
-		<%= image_tag "lab.png", :class=>"img-responsive", :size=>"100"%>
+		<%= image_tag "lab.png", :class=>"img-responsive", :size=>"60"%>
 	</div>
 </div
 
