--- a/app/views/admins/dashboard/show.html.erb
+++ b/app/views/admins/dashboard/show.html.erb
@@ -12,7 +12,7 @@
 	<p>Teaching Assistants</p>
 	<% unless @ta.empty? %>
 		<% for t in @ta do %>
-			<a href= <%="#{teaching_assistant_path(l)}"%>> <%= t.first_name %> </a>
+			<a href= <%="#{teaching_assistant_path(t)}"%>> <%= t.first_name %> </a>
 		<% end %>	
 	<% else %>
 		<p> NO tas FOUND </p>
