--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+// import all css.scss files in stylesheets directory
+@import "*.css.scss";
+
 /* User sign in and sign forms. */
 .border-form-div {
   max-width: 300px;
