--- a/app/views/application/_admin_header.html.erb
+++ b/app/views/application/_admin_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+<nav class="navbar-collapse bs-navbar-collapse" role="navigation">
 	<ul class="nav navbar-nav"> 
 		<li> 
 			<a href="/admins/dashboard">Admin Dashboard Menu</a>		
@@ -9,3 +9,4 @@
 			<%= link_to "Log Out", destroy_admin_session_path, method: :delete, class: "logout" %>
 		</li>
 	</ul>
+</nav>
