--- a/app/views/check_in_forms/show.html.erb
+++ b/app/views/check_in_forms/show.html.erb
@@ -1,17 +1,24 @@
-<h1>Showing Check In Form Details</h1>
-<h3>Name</h3>
-<%= @form.name %>
-<h3>SID</h3>
-<%= @form.SID %>
-<h3>Event</h3>
-<%= @form.event %>
-<br>
-<br>
+<div class="home-banner" align="center">
+  <h1>Check-In Details</h1>
+</div>
 
-<%= link_to 'Back to Teacher Dashboard', teaching_assistants_dashboard_path %>
-<br>
-<%= link_to 'Create another Check In Form', new_check_in_form_path %>
-<br>
-<%= link_to 'Edit this form', edit_check_in_form_path %>
-<br>
-<%= link_to 'Delete this form', check_in_form_path, :method => :delete %>
+<div align="center">
+  <h3>Name</h3>
+  <%= @form.name %>
+  <h3>SID</h3>
+  <%= @form.SID %>
+  <h3>Event</h3>
+  <%= @form.event %>
+  <br>
+  <br>
+
+  <%= link_to 'Check-In Another Lab Assistant', new_check_in_form_path %>
+  <br>
+  <%= link_to 'Edit This Check-In', edit_check_in_form_path %>
+  <br>
+  <%= link_to 'Delete This Check-In', check_in_form_path, :method => :delete %>
+  <br>
+  <br>
+  <%= link_to 'Back to Dashboard', teaching_assistants_dashboard_path %>
+  <br>
+</div>
