--- a/app/views/teaching_assistants/dashboard/show.html.erb
+++ b/app/views/teaching_assistants/dashboard/show.html.erb
@@ -1,18 +1,39 @@
-<div class="row">    
-	<br>
-	<h2 align="center"> Teaching Assistant Dashboard Stuff</h2>
-	Check in forms: 
-	<br><br>
+<div class="container">
+	<div class="row">    
+		<br>
+		<h2 align="center"> Teaching Assistant Dashboard Stuff</h2>
+		<p>Lab Assistants</p>
+		<% unless @la.empty? %>
+			<%= form_tag teaching_assistants_dashboard_path do %>
+				<table class="table table-hover table-striped">
+					<thead>
+						<tr>
+							<th></th>
+							<th>Full Name</th>
+							<th>Email</th>
+							<th>Validation Status</th>
+						</tr>
+					</thead>
+					<tbody>
+						<% for l in @la do %>
+							<tr>
+								<td> <%= check_box_tag 'la_ids[]', l.id %> </td> 
+								<td> <a href= <%="#{lab_assistant_path(l)}"%>> <%= l.first_name %> <%=l.last_name %> </a></td>
+								<td> <%= l.email %> </td>
+								<td> <%= text_for_validation_status(l.validated) %></td>
+							</tr>
+						<% end %>
 
-	<% @forms.each do |f| %>
-	 <%= f.name %>
-	 <%= f.SID %>
-	 <%= f.event %>
-	 <%= link_to 'See form', check_in_form_path(f) %>
-	 <br>
-	<% end %>
 
-	<br>
+					<%= submit_tag "Validate" %>
+					<%= submit_tag "Invalidate" %>
+					<%= submit_tag "Delete" %>
 
-	<a href='/check_in_forms/new'> Create a Check In Form </a>
+					</tbody>
+				</table>
+			<% end %>
+		<% else %>
+			<p> NO Lab Assistants FOUND </p>
+		<% end %>
+	</div>
 </div>
