make login pages, ta/la dashboards mobile friendly

--- a/app/views/application/_la_header.html.erb
+++ b/app/views/application/_la_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+<nav class="navbar-collapse bs-navbar-collapse" role="navigation">
   <ul class="nav navbar-nav"> 
     <li> 
       <a href="/lab_assistants/dashboard">Lab Assistant Dashboard Menu</a>    
