--- a/app/views/lab_assistants/dashboard/show.html.erb
+++ b/app/views/lab_assistants/dashboard/show.html.erb
@@ -1,7 +1,33 @@
 <div class="row">    
 	<br>
 	<h2 align="center"> Lab Assistant Dashboard Stuff</h2>
-	
+		<p> Lab Times: </p>
+		<p> Please Indicate Which Lab Times You Are Available for: </p>
+		<% unless @lt.empty? %>
+			<table class="table table-hover table-striped">
+				<thead>
+					<tr>
+						<th></th>
+						<th>Lab</th>
+						<th>Day</th>
+						<th>Beginning</th>
+						<th>Ending</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% for t in @lt do %>
+						<tr>
+							<td> </td>
+							<td> <%= t %> </td>
+							<td> <%= t.day.strftime("%A") %> </td>
+							<td> <%= t.open.strftime("%I:%M%p") %> </td>
+							<td> <%= t.close.strftime("%I:%M%p") %> </td>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
+		<% else %>
+			<p> NO Lab Times FOUND </p>
+		<% end %>
 	<br>
-
 </div>
