--- a/app/views/lab_assistants/dashboard/show.html.erb
+++ b/app/views/lab_assistants/dashboard/show.html.erb
@@ -4,30 +4,42 @@
 		<p> Lab Times: </p>
 		<p> Please Indicate Which Lab Times You Are Available for: </p>
 		<% unless @lt.empty? %>
-			<table class="table table-hover table-striped">
-				<thead>
-					<tr>
-						<th></th>
-						<th>Lab</th>
-						<th>Day</th>
-						<th>Beginning</th>
-						<th>Ending</th>
-					</tr>
-				</thead>
-				<tbody>
-					<% for t in @lt do %>
+			<%= form_for @curr_user, :url => lab_assistants_preferences_path do |f| %>
+				<table class="table table-hover table-striped">
+					<thead>
 						<tr>
-							<td> </td>
-							<td> <%= t %> </td>
-							<td> <%= t.day.strftime("%A") %> </td>
-							<td> <%= t.open.strftime("%I:%M%p") %> </td>
-							<td> <%= t.close.strftime("%I:%M%p") %> </td>
+							<th></th>
+							<th>Lab</th>
+							<th>Day</th>
+							<th>Beginning</th>
+							<th>Ending</th>
 						</tr>
-					<% end %>
-				</tbody>
-			</table>
+					</thead>
+					<tbody>
+						<% for t in @lt do %>
+							<tr>
+								<td> <%= check_box_tag 'lt_ids[]', t.id %> </td>
+								<td> <%= t %> </td>
+								<td> <%= t.day.strftime("%A") %> </td>
+								<td> <%= t.open.strftime("%I:%M%p") %> </td>
+								<td> <%= t.close.strftime("%I:%M%p") %> </td>
+							</tr>
+						<% end %>
+					</tbody>
+				</table>
+			<input name="submit_preferences" type="submit" value="Submit Lab Preferences"/>
+			<% end %>
 		<% else %>
 			<p> NO Lab Times FOUND </p>
 		<% end %>
 	<br>
 </div>
+
+<!-- check all the preferred times on front end-->
+<script>
+	preferred_times = <%= @preferred_times %>;
+	for (var x=0; x < preferred_times.length; x++) {
+		var curr = preferred_times[x];
+		$("input:checkbox[value="+ curr + "]").attr("checked", true);
+	}
+</script>
