change check in form model, create relation to lab_times, create 13 check in forms on lab time creation

--- a/app/views/admins/dashboard/show.html.erb
+++ b/app/views/admins/dashboard/show.html.erb
@@ -99,7 +99,7 @@
 										<%= ta.email %>
 									<% end %>		
 								</td>
-								<td> <%= t.id %> </td>
+								<td> <a href=<%= lab_time_path(t)%>> <%= t.id %> </a> </td>
 								<td> <%= t.day.strftime("%A") %> </td>
 								<td> <%= t.open.strftime("%I:%M%p") %> </td>
 								<td> <%= t.close.strftime("%I:%M%p") %> </td>
