--- a/app/views/check_in_forms/show.html.erb
+++ b/app/views/check_in_forms/show.html.erb
@@ -1,17 +1,9 @@
 <h1>Showing Check In Form Details</h1>
 <h3>Name</h3>
 <%= @form.name %>
-<h3>SID</h3>
-<%= @form.SID %>
-<h3>Event</h3>
-<%= @form.event %>
 <br>
-<br>
-
-<%= link_to 'Back to Teacher Dashboard', teaching_assistants_dashboard_path %>
-<br>
-<%= link_to 'Create another Check In Form', new_check_in_form_path %>
+<% for l in @las %> 
+	<%= l %>
+<% end %>
 <br>
 <%= link_to 'Edit this form', edit_check_in_form_path %>
-<br>
-<%= link_to 'Delete this form', check_in_form_path, :method => :delete %>
