--- a/app/views/teaching_assistants/dashboard/show.html.erb
+++ b/app/views/teaching_assistants/dashboard/show.html.erb
@@ -50,7 +50,7 @@
 				<tbody>
 					<% for t in @lt do %>
 						<tr>
-							<td> <%= t %> </td>
+							<td> <a href=<%= lab_time_path(t)%>> <%= t.id %> </a> </td>
 							<td> <%= t.day.strftime("%A") %> </td>
 							<td> <%= t.open.strftime("%I:%M%p") %> </td>
 							<td> <%= t.close.strftime("%I:%M%p") %> </td>
