Worked on lab assistant check-in form

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -78,6 +78,7 @@
 			First name: <%= f.text_field :first_name, required: "" %><br />
 			Last name : <%= f.text_field :last_name, required: "" %><br />
 			Email : <%= f.email_field :email, required: "" %><br />
+			SID : <%= f.text_field :SID, required: "" %><br />
 			<%= f.submit %>
 		  <% end %>
 	    </div>
