--- a/app/views/check_in_forms/new.html.erb
+++ b/app/views/check_in_forms/new.html.erb
@@ -16,8 +16,8 @@
 	<%= f.radio_button(:event, "office_hours") %>
 	<%= f.label(:event_office_hours, "Office Hours") %>
 	<br>
-	<%= f.radio_button(:event, "guerrilla_section") %>
-	<%= f.label(:event_guerrilla_section, "Guerrilla Section") %>
+	<%= f.radio_button(:event, "guerilla_section") %>
+	<%= f.label(:event_guerilla_section, "Guerilla Section") %>
 	<br>
 	<%= f.radio_button(:event, "homework_party") %>
 	<%= f.label(:event_homework_party, "Homework/Project Party") %>
