--- a/app/views/check_in_forms/edit.html.erb
+++ b/app/views/check_in_forms/edit.html.erb
@@ -13,8 +13,8 @@
 	<%= f.label(:event_lab, "Lab") %>
 	<%= f.radio_button(:event, "office_hours") %>
 	<%= f.label(:event_office_hours, "Office Hours") %>
-	<%= f.radio_button(:event, "guerrilla_section") %>
-	<%= f.label(:event_guerrilla_section, "Guerrilla Section") %>
+	<%= f.radio_button(:event, "guerilla_section") %>
+	<%= f.label(:event_guerilla_section, "Guerilla Section") %>
 	<%= f.radio_button(:event, "homework_party") %>
 	<%= f.label(:event_homework_party, "Homework/Project Party") %>
 	<%= f.submit "Update" %>
