--- a/app/views/check_in_forms/edit.html.erb
+++ b/app/views/check_in_forms/edit.html.erb
@@ -1,4 +1,22 @@
-<%= form_for @form do |f| %>
-  Name: <%= f.text_field :name %>
-  <%= f.submit "Update" %>
-<% end %>
+<div class="home-banner" align="center">
+	<h1> Edit Check-In </h1>
+</div>
+
+<div align="center">
+  <%= form_for @form do |f| %>
+    Name: <%= f.text_field :name %>
+    <br>
+    SID: <%= f.text_field :SID %>
+    <br>
+    What are you checking in for:
+    <%= f.radio_button(:event, "lab") %>
+    <%= f.label(:event_lab, "Lab") %>
+    <%= f.radio_button(:event, "office_hours") %>
+    <%= f.label(:event_office_hours, "Office Hours") %>
+    <%= f.radio_button(:event, "guerilla_section") %>
+    <%= f.label(:event_guerilla_section, "Guerilla Section") %>
+    <%= f.radio_button(:event, "homework_party") %>
+    <%= f.label(:event_homework_party, "Homework/Project Party") %>
+    <%= f.submit "Update" %>
+  <% end %>
+</div>
