--- a/app/views/admins/dashboard/show.html.erb
+++ b/app/views/admins/dashboard/show.html.erb
@@ -25,9 +25,9 @@
 						<% end %>
 
 
-					<%= submit_tag "Validate" %>
-					<%= submit_tag "Invalidate" %>
-					<%= submit_tag "Delete" %>
+					<%= submit_tag "Validate", :id=> "la_validate" %>
+					<%= submit_tag "Invalidate", :id=> "la_invalidate" %>
+					<%= submit_tag "Delete", :id=> "la_delete" %>
 
 					</tbody>
 				</table>
@@ -57,9 +57,9 @@
 						</tr>
 				<% end %>
 
-					<%= submit_tag "Validate" %>
-					<%= submit_tag "Invalidate" %>
-					<%= submit_tag "Delete" %>
+					<%= submit_tag "Validate", :id=> "ta_validate" %>
+					<%= submit_tag "Invalidate", :id=> "ta_invalidate" %>
+					<%= submit_tag "Delete", :id=> "ta_delete" %>
 
 					</tbody>
 				</table>
