polished to save as .csv as the extension

--- a/app/views/admins/dashboard/show.html.erb
+++ b/app/views/admins/dashboard/show.html.erb
@@ -126,8 +126,9 @@
 		  <%= f.submit %>
 		<% end %>	
 
+		<h3 align="center"> Check Ins </h3>
 
-		<%= link_to "export checkins", export_check_ins_path %>
+		<%= button_to "Export as CSV", export_check_ins_path(format: 'csv') %>
 
 	</div>
 </div>
