--- a/app/views/admins/dashboard/show.html.erb
+++ b/app/views/admins/dashboard/show.html.erb
@@ -128,7 +128,7 @@
 
 		<h3 align="center"> Check Ins </h3>
 
-		<%= button_to "Export as CSV", export_check_ins_path(format: 'csv') %>
+		<%= button_to "Export Check Ins as CSV", export_check_ins_path(format: 'csv') %>
 
 	</div>
 </div>
