--- a/app/views/check_in_forms/new.html.erb
+++ b/app/views/check_in_forms/new.html.erb
@@ -1,5 +1,5 @@
 <div class="home-banner" align="center">
-  <h1> CS61A Lab Assistant Check-In </h1>
+  <h1> <%= @course.name %>  Lab Assistant Check-In </h1>
 </div>
  		 
 <div align="center">
