--- a/app/views/check_in_forms/show.html.erb
+++ b/app/views/check_in_forms/show.html.erb
@@ -1,3 +1,6 @@
+<br>
+<h2 align="center"> Check In Form <%= @form.id %> Detail View</h2>
+
 <h1>Showing Check In Form Details</h1>
 <h3>Name</h3>
 <%= @form.name %>
