--- a/app/views/lab_assistants/show.html.erb
+++ b/app/views/lab_assistants/show.html.erb
@@ -1,3 +1,5 @@
+<br>
+<h2 align="center"> Lab Assistant Detail View</h2>
 <p> first name: <%= @la.first_name %>
 <p> last name: <%= @la.last_name %>
 <p> email: <%= @la.email %>
