--- a/app/views/teaching_assistants/show.html.erb
+++ b/app/views/teaching_assistants/show.html.erb
@@ -1,3 +1,5 @@
+<br>
+<h2 align="center"> Teaching Assistant Detail View</h2>
 <p> first name: <%= @ta.first_name %>
 <p> last name: <%= @ta.last_name %>
 <p> email: <%= @ta.email %>
