--- a/app/views/lab_times/show.html.erb
+++ b/app/views/lab_times/show.html.erb
@@ -1,24 +1,29 @@
-Lab Time <%= @l.id %>
+<br>
+<h2 align="center"> Lab Time <%= @l.id %> Detail View</h2>
 
-Assign Lab Assistant To Lab
-<p> 
-	<%= form_for @l do |f| %>
-		
-	  <% case @l.course_id%>
-	  <% when 1 %>
-			<% options = options_from_collection_for_select(@a_las, 'id', 'email') %>
-	  <% when 2 %>
-		  <% options = options_from_collection_for_select(@b_las, 'id', 'email') %>
-	  <% when 3 %>
-		  <% options = options_from_collection_for_select(@c_las, 'id', 'email') %>	
-	  <% else %>
-		  <!-- more classes in future -->
-	  <% end %>
-	  <%= f.select :id,  options, include_blank: true %>
-	  <%= f.hidden_field :lab_time_id, :value => @l.id %>
-      <input name="assign_la" type="submit" value="Assign LA"/>
-	<% end %>
-</p>
+<p> Lab Time <%= @l.id %> </p>
+
+<% if @current_user.is_a? Admin %>
+	<p> Assign Lab Assistant To Lab </p>
+	<p> 
+		<%= form_for @l do |f| %>
+			
+		  <% case @l.course_id%>
+		  <% when 1 %>
+				<% options = options_from_collection_for_select(@a_las, 'id', 'email') %>
+		  <% when 2 %>
+			  <% options = options_from_collection_for_select(@b_las, 'id', 'email') %>
+		  <% when 3 %>
+			  <% options = options_from_collection_for_select(@c_las, 'id', 'email') %>	
+		  <% else %>
+			  <!-- more classes in future -->
+		  <% end %>
+		  <%= f.select :id,  options, include_blank: true %>
+		  <%= f.hidden_field :lab_time_id, :value => @l.id %>
+	      <input name="assign_la" type="submit" value="Assign LA"/>
+		<% end %>
+	</p>
+<% end %>
 
 Current Lab Assistants:
 
