--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+@import "bourbon";
+@import "neat";
+
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
 // import all css.scss files in stylesheets directory
 @import "*.css.scss";
 
@@ -32,4 +37,23 @@
   height: auto;
   margin-bottom: 15px;
   padding: 7px 9px;
+}
+
+body {
+  font-family: 'Lato', Helvetica Neue, sans-serif;
+}
+
+h1 {
+  font-weight: bold;
+}
+
+.navbar-collapse {
+  background-color: #d3d3d3;
+}
+.float-right {
+  float: right;
+}
+.form-time {
+  display: inline-block;
+  width: 48%;
 }
